# test1

./: .clang-format  .clang-tidy  .cmake-format.py  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmessage  .gitmodules  .readthedocs.yml  CMakeLists.txt  README.md  README.rst  cmake-variants.yaml
.devcontainer/: devcontainer.json
.gitlab/merge_request_templates/: thirdpin.md
doc/sphinx/: Makefile  conf.py  glossary.rst  index.rst
doc/sphinx/_templates/: layout.html
doc/sphinx/pages/: how_to_build.rst  how_to_use.rst  project_structure.rst
docs/: changelog.txt
docs/sphinx/: .gitignore  .gitlab-ci.yml  global_roles.rst  requirements.txt
docs/sphinx/_static/css/: styles.css
docs/sphinx/pages/: how_to_build.rst  how_to_use.rst  project_structure.rst
emb/: .clang-format  .gitignore  CMakeLists.txt
emb/.devcontainer/: devcontainer.json
emb/lib/: .gitignore
emb/src/: CMakeLists.txt
emb/src/template/: CMakeLists.txt
emb/src/template/src/: main.cpp
emb/src/template/src/hw/: CMakeLists.txt  HwStub.cpp  HwStub.hpp
emb/src/yxml/: CMakeLists.txt
include/: .gitignore
src/: CMakeLists.txt  TEMP-clang-format-test.cpp  main.cpp
src/hw/: CMakeLists.txt  HwStub.cpp  HwStub.hpp
src/ldscripts/: template.ld
